force-app/main/default/objects/SALT_Product__c/SALT_Product__c.object-meta.xml
<CustomObject>
    <description>This object will capture the products that are purchased by schools from SALT</description>
    <label>SALT Product</label>
    <nameField>
        <label>SALT Item Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SALT Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>