force-app/main/default/objects/SALT_Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>This field will capture the product item description</description>
    <label>Product Description</label>
    <type>TextArea</type>
</CustomField>