force-app/main/default/objects/SALT_Product__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>This field will capture the family to which the product belongs</description>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Printed Materials</fullName>
            </value>
            <value>
                <fullName>Premiums</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>