force-app/main/default/objects/SALT_Product__c/fields/ShortDescription__c.field-meta.xml
<CustomField>
    <fullName>ShortDescription__c</fullName>
    <description>This field will capture the product short description</description>
    <label>Product Short Description</label>
    <type>TextArea</type>
</CustomField>