force-app/main/default/objects/SALT_Product__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Cost__c</columns>
    <columns>Description__c</columns>
    <columns>ShortDescription__c</columns>
    <columns>Family__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>